option('gtk_doc', type: 'boolean', value: false, description: 'Enable Gtk-Doc generation')
option('introspection', type: 'feature', value: 'auto', description: 'Build Introspection data')
option('code-style-check', type: 'boolean', description: 'enable coding style checks')
option('install-headers', type: 'string', description: 'install development headers here')
option('libdir-suffix', type: 'string', description: 'install a shared library into project-specific subdir')
option('google-relay', type: 'boolean', value: false, description: 'enable google jingle relay support')
